Fix: responsive video, gallery items spacing

--- a/_templates/default/scss/_responsive.scss
+++ b/_templates/default/scss/_responsive.scss
@@ -1,6 +1,7 @@
 .bt-responsive {
 
   img,
+  video,
   #pageEntries li.xEntry .xGalleryContainer:not(.xGalleryType-pile) .xGallery,
   #pageEntries li.xEntry .xGalleryContainer .xGallery .xGalleryItem,
   #pageEntries li.xEntry .xGalleryContainer .xGallery .xGalleryItem .image {
