--- a/_templates/white-0.3.5/scss/_responsive.scss
+++ b/_templates/white-0.3.5/scss/_responsive.scss
@@ -7,6 +7,7 @@
   }
 
   img,
+  video,
   ol#pageEntries li.xEntry .xGalleryContainer:not(.xGalleryType-pile) .xGallery,
   ol#pageEntries li.xEntry .xGalleryContainer .xGallery .xGalleryItem,
   ol#pageEntries li.xEntry .xGalleryContainer .xGallery .xGalleryItem .image {
